crates/test-files/fixtures/compile_errors/init_duplicate_def.fe
contract Foo {
    pub fn __init__() {}

    pub fn bar() {}

    pub fn __init__() {
        1 + 2
    }

    pub fn __init__() {
        3 + 4
    }
}
